fixed minor mobile view alignment

--- a/public/styles/stylus/main.styl
+++ b/public/styles/stylus/main.styl
@@ -53,8 +53,8 @@ a:hover
   right 16px
   @media screen and (max-width: 770px)
     border-radius 0
-    top -24px
-    left 73%
+    top -30px
+    left 75%
     padding 32px
 
 .back:hover
